fix icon mark read not showing

--- a/styles/pbwow3/theme/custom.css
+++ b/styles/pbwow3/theme/custom.css
@@ -91,6 +91,53 @@ Some defaults are included, like on PBWoW.com
 .mvp .content strong { color: #FFF; }
 
 
+/* Icon images
+--------------------------------------------- */
+.small-icon {
+	background: none !important;
+	padding: 0;
+	position: relative;
+}
+
+.small-icon > a {
+	padding-left: 0 !important;
+	padding-right: 0 !important;
+}
+
+.small-icon > a:before,
+#top-bar .small-icon:before,
+.profile-context .user-icons a:before {
+	display: inline-block;
+	font-family: FontAwesome;
+	color: #888;
+	text-shadow: 0 0 5px #000;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: inherit;
+	text-decoration: none;
+	padding-right: 3px;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.small-icon > a:hover:before {
+	color: #FFF;
+	text-shadow: 0 0 16px #009CFF;
+}
+
+.dropdown-contents .small-icon > a:before {
+	width: 1.28571em;
+	text-align: center;
+}
+
+#top-bar .small-icon:before,
+#top-bar .small-icon.link > a:before {
+	color: inherit;
+	padding-right: 5px;
+}
+
+
 /* Top-bar links
  * (example of how to apply custom icons to elements in the top-bar)
 --------------------------------------------- */
